[gd_scene load_steps=2 format=3 uid="uid://criwwmy7de7bw"]

[ext_resource type="Script" uid="uid://y1g6j227iswe" path="res://scripts/disctactions/distraction_clicker.gd" id="1_6jgap"]

[node name="distraction_clicker" type="ColorRect" groups=["d_clicker", "distraction"]]
custom_minimum_size = Vector2(128, 128)
script = ExtResource("1_6jgap")

[node name="Button" type="Button" parent="."]
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = 9.785
offset_right = 55.0
offset_bottom = 40.785
grow_horizontal = 2
grow_vertical = 2
text = "click"

[node name="clicker" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -38.515
offset_right = 20.0
offset_bottom = -15.515
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "clicker"

[node name="Timer_Autoclick" type="Timer" parent="."]

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="gui_input" from="clicker" to="." method="_on_gui_input"]
[connection signal="timeout" from="Timer_Autoclick" to="." method="_on_timer_autoclick_timeout"]
